# CV-Generator

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  urls.json
app/: app.py
bot/: server.py
bot7.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
collector/: models.py  parser.py
database/: database.py
generator/: current_cv.py  generator.py  latex_to_pdf.py
